add custom hover information on the map

--- a/notebooks/streamlit_params.ipynb
+++ b/notebooks/streamlit_params.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create dictionaries for steamlit app data\n",
+    "# Create look up dictionaries for steamlit app\n",
     "\n",
-    "use lewagon pyenv for any case"
+    "use lewagon pyenv for any case when something does not work"
    ]
   },
   {
@@ -24,7 +24,7 @@
    "source": [
     "---\n",
     "\n",
-    "# original data\n"
+    "## original data\n"
    ]
   },
   {
@@ -1001,7 +1001,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### For the range around average estimate: "
+    "## Estimate average consumption: "
    ]
   },
   {
@@ -1468,7 +1468,146 @@
    "source": [
     "---\n",
     "\n",
-    "## mean kwh per state to play with th emap"
+    "## make pretty values\n",
+    "\n",
+    "Improve labels for selecting features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "old_strings = [\n",
+    "    'Single-family house attached to one or more other houses (for example: duplex, row house, or townhome)'\n",
+    "    ,'Steam or hot water system with radiators or pipes '\n",
+    "    ,'Ductless heat pump, also known as a “mini-split”'\n",
+    "    ,'Built-in electric units installed in walls, ceilings, baseboards, or floors'\n",
+    "    ,'Built-in room heater burning gas or oil'\n",
+    "    #,\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_strings = [\n",
+    "    'Single-family house attached to one or more other houses'\n",
+    "    ,'Steam or hot water system'\n",
+    "    ,'Ductless heat pump'\n",
+    "    ,'Built-in electric units'\n",
+    "    ,'Built-in room heater'\n",
+    "    #,\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Single-family house attached to one or more other houses (for example: duplex, row house, or townhome)': 'Single-family house attached to one or more other houses',\n",
+       " 'Steam or hot water system with radiators or pipes ': 'Steam or hot water system',\n",
+       " 'Ductless heat pump, also known as a “mini-split”': 'Ductless heat pump',\n",
+       " 'Built-in electric units installed in walls, ceilings, baseboards, or floors': 'Built-in electric units',\n",
+       " 'Built-in room heater burning gas or oil': 'Built-in room heater'}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# make a new pretty label dict\n",
+    "pretty_values = {k:v for k,v in zip(old_strings, new_strings) }\n",
+    "pretty_values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'TYPEHUQ': {'1': 'Mobile home', '2': 'Single-family house detached from any other house ', '3': 'Single-family house attached to one or more other houses', '4': 'Apartment in a building with 2 to 4 units', '5': 'Apartment in a building with 5 or more units'}, 'STORIES': {'1': 'One story', '2': 'Two stories', '3': 'Three stories', '4': 'Four or more stories', '5': 'Split-level'}, 'YEARMADERANGE': {'1': 'Before 1950', '2': '1950 to 1959', '3': '1960 to 1969', '4': '1970 to 1979', '5': '1980 to 1989', '6': '1990 to 1999', '7': '2000 to 2009', '8': '2010 to 2015', '9': '2016 to 2020'}, 'WINDOWS': {'1': '1 or 2 windows', '2': '3 to 5 windows', '3': '6 to 9 windows', '4': '10 to 15 windows', '5': '16 to 19 windows', '6': '20 to 29 windows', '7': '30 or more windows'}, 'SWIMPOOL': {'1': 'Yes', '0': 'No'}, 'DISHWASH': {'1': 'Yes', '0': 'No'}, 'CWASHER': {'1': 'Yes', '0': 'No'}, 'DRYER': {'1': 'Yes', '0': 'No'}, 'TELLWORK': {'1': 'Yes', '0': 'No'}, 'HEATHOME': {'1': 'Yes', '0': 'No'}, 'EQUIPM': {'3': 'Central furnace ', '2': 'Steam or hot water system', '4': 'Central heat pump', '13': 'Ductless heat pump', '5': 'Built-in electric units', '7': 'Built-in room heater', '8': 'Wood or pellet stove ', '10': 'Portable electric heaters', '99': 'Other '}, 'AIRCOND': {'1': 'Yes', '0': 'No'}, 'SMARTMETER': {'1': 'Yes', '0': 'No'}, 'SOLAR': {'1': 'Yes', '0': 'No'}, 'NUMPORTEL': {'0': '0', '1': '1', '2': '2', '3': '3', '4': '4', '5': '5', '6': '6', '7': '7', '8': '8', '9': '9'}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "## make new mapped_features\n",
+    "for feature in mapped_features:\n",
+    "    #print(inv_mapped_features.get(feature))\n",
+    "    for value in old_strings:\n",
+    "        if value in inv_mapped_features.get(feature).values():\n",
+    "            pretty_value = pretty_values.get(value)\n",
+    "            key = mapped_features[feature].get(value)\n",
+    "            inv_mapped_features[feature][key] = pretty_value\n",
+    "print(f'{inv_mapped_features}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mapped_features = {'TYPEHUQ': {'Mobile home': '1', 'Single-family house detached from any other house ': '2', 'Single-family house attached to one or more other houses': '3', 'Apartment in a building with 2 to 4 units': '4', 'Apartment in a building with 5 or more units': '5'}, 'STORIES': {'One story': '1', 'Two stories': '2', 'Three stories': '3', 'Four or more stories': '4', 'Split-level': '5'}, 'YEARMADERANGE': {'Before 1950': '1', '1950 to 1959': '2', '1960 to 1969': '3', '1970 to 1979': '4', '1980 to 1989': '5', '1990 to 1999': '6', '2000 to 2009': '7', '2010 to 2015': '8', '2016 to 2020': '9'}, 'WINDOWS': {'1 or 2 windows': '1', '3 to 5 windows': '2', '6 to 9 windows': '3', '10 to 15 windows': '4', '16 to 19 windows': '5', '20 to 29 windows': '6', '30 or more windows': '7'}, 'SWIMPOOL': {'Yes': '1', 'No': '0'}, 'DISHWASH': {'Yes': '1', 'No': '0'}, 'CWASHER': {'Yes': '1', 'No': '0'}, 'DRYER': {'Yes': '1', 'No': '0'}, 'TELLWORK': {'Yes': '1', 'No': '0'}, 'HEATHOME': {'Yes': '1', 'No': '0'}, 'EQUIPM': {'Central furnace ': '3', 'Steam or hot water system': '2', 'Central heat pump': '4', 'Ductless heat pump': '13', 'Built-in electric units': '5', 'Built-in room heater': '7', 'Wood or pellet stove ': '8', 'Portable electric heaters': '10', 'Other ': '99'}, 'AIRCOND': {'Yes': '1', 'No': '0'}, 'SMARTMETER': {'Yes': '1', 'No': '0'}, 'SOLAR': {'Yes': '1', 'No': '0'}, 'NUMPORTEL': {'0': '0', '1': '1', '2': '2', '3': '3', '4': '4', '5': '5', '6': '6', '7': '7', '8': '8', '9': '9'}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# invert back to new mapped_features\n",
+    "def invert_dict(feature, mapped_features):\n",
+    "    return {v:k for k,v in mapped_features[feature].items()}\n",
+    "\n",
+    "new_mapped_features = {feature:invert_dict(feature, inv_mapped_features) for feature in inv_mapped_features.keys()}\n",
+    "\n",
+    "print(f'mapped_features = {new_mapped_features}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'invert_dict' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)\n",
+      "\u001b[1;32m/home/svetlana/code/dicanadu/01-household-energy/notebooks/streamlit_params.ipynb Cell 69\u001b[0m line \u001b[0;36m1\n",
+      "\u001b[0;32m----> <a href='vscode-notebook-cell:/home/svetlana/code/dicanadu/01-household-energy/notebooks/streamlit_params.ipynb#Y120sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m invert_dict(\u001b[39m'\u001b[39m\u001b[39mTYPEHUQ\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'invert_dict' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "invert_dict('TYPEHUQ')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## mean consumption per state for the map"
    ]
   },
   {
@@ -2665,130 +2804,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "## make pretty values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "old_strings = [\n",
-    "    'Single-family house attached to one or more other houses (for example: duplex, row house, or townhome)'\n",
-    "    ,'Steam or hot water system with radiators or pipes '\n",
-    "    ,'Ductless heat pump, also known as a “mini-split”'\n",
-    "    ,'Built-in electric units installed in walls, ceilings, baseboards, or floors'\n",
-    "    ,'Built-in room heater burning gas or oil'\n",
-    "    #,\n",
-    "]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_strings = [\n",
-    "    'Single-family house attached to one or more other houses'\n",
-    "    ,'Steam or hot water system'\n",
-    "    ,'Ductless heat pump'\n",
-    "    ,'Built-in electric units'\n",
-    "    ,'Built-in room heater'\n",
-    "    #,\n",
-    "]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Single-family house attached to one or more other houses (for example: duplex, row house, or townhome)': 'Single-family house attached to one or more other houses',\n",
-       " 'Steam or hot water system with radiators or pipes ': 'Steam or hot water system',\n",
-       " 'Ductless heat pump, also known as a “mini-split”': 'Ductless heat pump',\n",
-       " 'Built-in electric units installed in walls, ceilings, baseboards, or floors': 'Built-in electric units',\n",
-       " 'Built-in room heater burning gas or oil': 'Built-in room heater'}"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# make a new pretty label dict\n",
-    "pretty_values = {k:v for k,v in zip(old_strings, new_strings) }\n",
-    "pretty_values\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'TYPEHUQ': {'1': 'Mobile home', '2': 'Single-family house detached from any other house ', '3': 'Single-family house attached to one or more other houses', '4': 'Apartment in a building with 2 to 4 units', '5': 'Apartment in a building with 5 or more units'}, 'STORIES': {'1': 'One story', '2': 'Two stories', '3': 'Three stories', '4': 'Four or more stories', '5': 'Split-level'}, 'YEARMADERANGE': {'1': 'Before 1950', '2': '1950 to 1959', '3': '1960 to 1969', '4': '1970 to 1979', '5': '1980 to 1989', '6': '1990 to 1999', '7': '2000 to 2009', '8': '2010 to 2015', '9': '2016 to 2020'}, 'WINDOWS': {'1': '1 or 2 windows', '2': '3 to 5 windows', '3': '6 to 9 windows', '4': '10 to 15 windows', '5': '16 to 19 windows', '6': '20 to 29 windows', '7': '30 or more windows'}, 'SWIMPOOL': {'1': 'Yes', '0': 'No'}, 'DISHWASH': {'1': 'Yes', '0': 'No'}, 'CWASHER': {'1': 'Yes', '0': 'No'}, 'DRYER': {'1': 'Yes', '0': 'No'}, 'TELLWORK': {'1': 'Yes', '0': 'No'}, 'HEATHOME': {'1': 'Yes', '0': 'No'}, 'EQUIPM': {'3': 'Central furnace ', '2': 'Steam or hot water system', '4': 'Central heat pump', '13': 'Ductless heat pump', '5': 'Built-in electric units', '7': 'Built-in room heater', '8': 'Wood or pellet stove ', '10': 'Portable electric heaters', '99': 'Other '}, 'AIRCOND': {'1': 'Yes', '0': 'No'}, 'SMARTMETER': {'1': 'Yes', '0': 'No'}, 'SOLAR': {'1': 'Yes', '0': 'No'}, 'NUMPORTEL': {'0': '0', '1': '1', '2': '2', '3': '3', '4': '4', '5': '5', '6': '6', '7': '7', '8': '8', '9': '9'}}\n"
-     ]
-    }
-   ],
-   "source": [
-    "## make new mapped_features\n",
-    "for feature in mapped_features:\n",
-    "    #print(inv_mapped_features.get(feature))\n",
-    "    for value in old_strings:\n",
-    "        if value in inv_mapped_features.get(feature).values():\n",
-    "            pretty_value = pretty_values.get(value)\n",
-    "            key = mapped_features[feature].get(value)\n",
-    "            inv_mapped_features[feature][key] = pretty_value\n",
-    "print(f'{inv_mapped_features}')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mapped_features = {'TYPEHUQ': {'Mobile home': '1', 'Single-family house detached from any other house ': '2', 'Single-family house attached to one or more other houses': '3', 'Apartment in a building with 2 to 4 units': '4', 'Apartment in a building with 5 or more units': '5'}, 'STORIES': {'One story': '1', 'Two stories': '2', 'Three stories': '3', 'Four or more stories': '4', 'Split-level': '5'}, 'YEARMADERANGE': {'Before 1950': '1', '1950 to 1959': '2', '1960 to 1969': '3', '1970 to 1979': '4', '1980 to 1989': '5', '1990 to 1999': '6', '2000 to 2009': '7', '2010 to 2015': '8', '2016 to 2020': '9'}, 'WINDOWS': {'1 or 2 windows': '1', '3 to 5 windows': '2', '6 to 9 windows': '3', '10 to 15 windows': '4', '16 to 19 windows': '5', '20 to 29 windows': '6', '30 or more windows': '7'}, 'SWIMPOOL': {'Yes': '1', 'No': '0'}, 'DISHWASH': {'Yes': '1', 'No': '0'}, 'CWASHER': {'Yes': '1', 'No': '0'}, 'DRYER': {'Yes': '1', 'No': '0'}, 'TELLWORK': {'Yes': '1', 'No': '0'}, 'HEATHOME': {'Yes': '1', 'No': '0'}, 'EQUIPM': {'Central furnace ': '3', 'Steam or hot water system': '2', 'Central heat pump': '4', 'Ductless heat pump': '13', 'Built-in electric units': '5', 'Built-in room heater': '7', 'Wood or pellet stove ': '8', 'Portable electric heaters': '10', 'Other ': '99'}, 'AIRCOND': {'Yes': '1', 'No': '0'}, 'SMARTMETER': {'Yes': '1', 'No': '0'}, 'SOLAR': {'Yes': '1', 'No': '0'}, 'NUMPORTEL': {'0': '0', '1': '1', '2': '2', '3': '3', '4': '4', '5': '5', '6': '6', '7': '7', '8': '8', '9': '9'}}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# invert back to new mapped_features\n",
-    "def invert_dict(feature, mapped_features):\n",
-    "    return {v:k for k,v in mapped_features[feature].items()}\n",
-    "\n",
-    "new_mapped_features = {feature:invert_dict(feature, inv_mapped_features) for feature in inv_mapped_features.keys()}\n",
-    "\n",
-    "print(f'mapped_features = {new_mapped_features}')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "invert_dict('TYPEHUQ')\n"
-   ]
   },
   {
    "cell_type": "markdown",
